# linopt_imtools

./: CMakeLists.txt  README.md  compute_SVDdecomp.c  compute_SVDdecomp.h  compute_SVDpseudoInverse.c  compute_SVDpseudoInverse.h  image_construct.c  image_construct.h  image_fitModes.c  image_fitModes.h  image_to_vec.c  image_to_vec.h  imcube_crossproduct.c  lin1Dfit.c  lin1Dfit.h  linRM_from_inout.c  linRM_from_inout.h  linopt_imtools.c  linopt_imtools.h  makeCPAmodes.c  makeCPAmodes.h  makeCosRadModes.c  makeCosRadModes.h  mask_to_pixtable.c  mask_to_pixtable.h  vec_to_2Dimage.c  vec_to_2Dimage.h
